# pflow-rs

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  model.json
app/: Cargo.toml  Makefile
app/src/: algebraic_coffee_machine.rs  basic_state_machine.rs  coffee_machine.rs  command.rs  lib.rs  main.rs  models.rs  server.rs  storage.rs  tic_tac_toe.rs
contracts/script/: MyStateMachine.s.sol
contracts/src/: MyStateMachine.sol
contracts/test/: MyStateMachine.t.sol
crates/bindings/: Cargo.toml
crates/bindings/src/: ierc721enumerable.rs  ierc721metadata.rs  ierc721tokenreceiver.rs  lib.rs  mock_erc20.rs  mockerc20.rs  mockerc721.rs  model.rs  modelinterface.rs  my_state_machine.rs  mymodelcontract.rs  mystatemachine.rs  pflow_dsl.rs  pflowdsl.rs
crates/src/: metamodel.rs  mock_erc721.rs  model_interface.rs  my_model_contract.rs  shared_types.rs
src/: fixtures.rs  lib.rs  main.rs  server.rs  storage.rs
static/: asset-manifest.json  index.html  manifest.json  share.json
static/static/css/: main.31cba778.css  main.31cba778.css.map
static/static/js/: main.08efb24d.js  main.08efb24d.js.LICENSE.txt
