[package]
name = "pflow"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "=1.0.56"
axum = "0.7"
axum-server = "0.6.0"
base64 = "0.21.7"
clap = { version = "4.4.4", features = ["derive"] }
include_dir = "0.6.0"
libipld = "0.16.0"
multibase = "0.9.1"
rusqlite = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = {  version = "0.5", features = ["util", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
zip = "0.6.6"
pflow-metamodel = "0.1.1"
webbrowser = "0.8.12"
