[package]
name = "pflow-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "providers",
    "node-bindings",
] }
#foundry-contracts.workspace = true
thiserror = "=1.0.56"
axum = "0.7"
axum-server = "0.6.0"
base64 = "0.21.7"
clap = { version = "4.4.4", features = ["derive"] }
eyre = "0.6"
include_dir = "0.6.0"
libipld = "0.16.0"
multibase = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = {  version = "0.5", features = ["util", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
pflow-metamodel = "0.2.0"
webbrowser = "0.8.12"
lazy_static = "1.5.0"
rocksdb = "0.22.0"
async-recursion = "1.1.1"
rusqlite = "0.32.1"
futures-util = "0.3.30"


[[bin]]
name = "pflow"
path = "src/main.rs"
